testsuite/tests/linear/should_fail/LinearViewPattern.stderr

LinearViewPattern.hs:11:4: error:
    • Couldn't match type ‘'Many’ with ‘'One’
        required by a non-linear pattern
    • In the pattern: not -> True
      In an equation for ‘f’: f (not -> True) = True
